<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C19E7A"

    tools:context=".frontend.MainActivity">

    <!-- Settings Button -->
    <ImageButton
        android:id="@+id/to_settings"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_settings"
        android:contentDescription="@string/settings_button_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043"
        app:tint="@color/brown_primary"
        />

    <!-- Main Title -->
    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/rammetto_one"
        android:text="@string/main_welcome"
        android:textColor="@color/brown_primary"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!-- Today's Calories -->
    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:fontFamily="@font/rammetto_one"
        android:text="@string/todays_calories"
        android:textColor="@color/brown_primary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!-- Daily Calories -->
    <TextView
        android:id="@+id/dailycalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="232dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/daily_calories"
        android:textColor="@color/brown_primary"
        android:textSize="37sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.843"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!-- Calorie Progress Ring -->
    <com.example.munchai.model.CircularProgressView
        android:id="@+id/calorie_progress_ring"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cpv_backgroundColor="@color/brown_background"
        app:cpv_max="2000"
        app:cpv_progress="0"
        app:cpv_progressColor="@color/brown_primary"
        app:cpv_strokeWidth="20dp"
        app:layout_constraintBottom_toTopOf="@id/to_foodlog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title"
        app:layout_constraintVertical_bias="0.153"
        />

    <!-- Log Food Button -->
    <Button
        android:id="@+id/to_foodlog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:text="@string/logfood_button"
        android:textColor="@color/brown_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.629"
        />

    <Button
        android:id="@+id/to_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View Food Log"
        android:textColor="@color/brown_background"
        android:fontFamily="@font/inter_medium"
        app:layout_constraintTop_toBottomOf="@id/to_foodlog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        />

    <Button
        android:id="@+id/to_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View Gemini testing"
        android:textColor="@color/brown_background"
        android:fontFamily="@font/inter_medium"
        app:layout_constraintTop_toBottomOf="@id/to_history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>